home-automation/omada-controller/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-route
  namespace: omada-controller
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - omada.crobceratops.ryanbeales.com
    - omada.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: omada-controller
          port: 8043
          weight: 1
